<input type="button" value=""> should not list default text.  Bug 166913, r=jkeiser, sr=jst